--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/WebQLCuaHangThucPham.csproj
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/WebQLCuaHangThucPham.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Models\CTDH.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CurrentUser.cs" />
     <Compile Include="Models\DonHang.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -2610,7 +2611,6 @@
     <Content Include="Views\Products\LoaiSanPham.cshtml" />
     <Content Include="Views\Products\ChiTietSanPham.cshtml" />
     <Content Include="Views\Products\SanPham.cshtml" />
-    <Content Include="Views\Shared\_LayoutProducts.cshtml" />
     <Content Include="Views\Products\SanPhamTuongTu.cshtml" />
     <Content Include="Views\Shared\_LayoutCuaHang.cshtml" />
     <Content Include="Views\Products\ListSanPham.cshtml" />
