--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/bin/WebQLCuaHangThucPham.dll.config
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/bin/WebQLCuaHangThucPham.dll.config
@@ -5,9 +5,10 @@
   -->
 <configuration>
 	<configSections>
-		
+
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+	</configSections>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -17,6 +18,11 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
+		<!--cau hinh coockie-->
+		<authentication mode="Forms">
+			<forms loginUrl="~/TrangChu" timeout="2880" />
+			<!--//hết tgian timeout thì sẽ tự trở về trang chủ-->
+		</authentication>
 	</system.web>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -62,5 +68,8 @@
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
-	
-<connectionStrings><add name="QLCuaHangThucPhamEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NGUYEN-CHI-HIEU;initial catalog=QLCuaHangThucPham_N02;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+
+	<connectionStrings>
+		<add name="QLCuaHangThucPhamEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NGUYEN-CHI-HIEU;initial catalog=QLCuaHangThucPham_N02;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
+</configuration>
