--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/WebQLCuaHangThucPham.csproj
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/WebQLCuaHangThucPham.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Models\CTDH.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CurrentUser.cs" />
     <Compile Include="Models\DonHang.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
