--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Web.config
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Web.config
@@ -68,6 +68,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QLCuaHangThucPhamEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NGUYEN-CHI-HIEU;initial catalog=QLCuaHangThucPham_N02;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="QLCuaHangThucPhamEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-9I2VLVA\SQLEXPRESS;initial catalog=QLCuaHangThucPham;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
